# CyberSecurity-Threat-Detection

./: .gitignore  .render-buildpacks.json  README.md  pyproject.toml  render.yaml  requirements.txt  setup.py
.streamlit/: config.toml  secrets.toml
src/: download_data.py
src/app/: api.py  model_loader.py
src/ui/: app.py
