[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-threat-detector"
version = "1.0.0"
authors = [
    { name = "Fayzan Khan" }
]
description = "A machine learning-based cyber threat detection system"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "gunicorn>=21.2",
    "streamlit>=1.34",
    "plotly>=1.34",
    "pyyaml>=6.0",
    "requests>=2.31",
    "python-multipart>=0.0.9",
]
